2007-05-06  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/Makefile.am:
    * libseahorse/seahorse-combo-keys.c:
    * libseahorse/seahorse-combo-keys.h:
    * libseahorse/seahorse-signer.c:
    * libseahorse/seahorse-prefs.c:
    * src/seahorse-sign.c: Move libseahorse/seahorse-default-key-control.* to
    libseahorse/seahorse-combo-keys.*
    * libseahorse/seahorse-notification.c:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h: 
    * src/seahorse-key-manager-store.c:
    * src/seahorse-key-properties.c: Fix problem with internationalized
    expiration dates on PGP keys.  Fixes bug #393207

2007-05-05  Adam Schreiber  <sadam@clemson.edu>

    * help/C/seahorse.xml: Fix spelling error

2007-05-04  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-widget.c: Change gnome_help_display function 
    called.  Fixes bug #415807

2007-05-03  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-revoke.glade:
    * src/seahorse-add-subkey.c:
    * src/seahorse-add-subkey.glade: Remove use of GtkOptionMenu in favor
    of GtkComboBox.  Fixes bug #370817


2007-05-01  Adam Schreiber  <sadam@clemson.edu>

    * acinclude.m4: Add stdio.h to mlock check.  Fixes bug #435016
    * pixmaps/22x22/Makefile.am:
    * pixmaps/22x22/seahorse-person.png (added):
    * pixmaps/22x22/seahorse-person.svg (added):
    * pixmaps/22x22/seahorse-sign.png (added):
    * pixmaps/22x22/seahorse-sign.svg (added): Add files causing warning
    messages.  Fixes bug #435051

2007-04-26  Adam Schreiber  <sadam@clemson.edu>

    * MAINTAINERS: Added myself as a co-maintainer

2007-04-24  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-ssh-operation.c: Escaping already provides 
    single quotes to comment string
    * src/seahorse-ssh-generate.c: Choose 1024 bits when DSA is selected.
    Fixes bug #419227

2007-04-16  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-util.c: Provide a better 'decrypt