@@ -1,3 +1,8 @@
+2007-05-08  Adam Schreiber  <sadam@clemson.edu>
+    
+    * plugins/nautilus/Makefile.am: Remove rule to install desktop files in 
+    /usr/share/control-center-2.0/capplets/.  Fixes bug #436840
+
 2007-05-06  Adam Schreiber  <sadam@clemson.edu>
 
     * libseahorse/Makefile.am:
